Fixed overflow of search placeholder

--- a/frontend/src/components/HomeSearch/HomeSearch.scss
+++ b/frontend/src/components/HomeSearch/HomeSearch.scss
@@ -35,10 +35,11 @@
     text-align: left;
     font-size: 2.5rem;
     font-family: inherit;
-    width: 100%;
-    padding-left: 3.3rem;
+    width: 95%;
+    overflow: hidden;
+    padding: 5rem 0 5rem 3.3rem;
     color: rgb(144, 144, 144);
-    top: 0.8rem;
+    top: -4.2rem;
     left: 0;
 
     &--Suggestion {
